# ChangeLog for Gentoo Linux System Intialization ("rc") scripts 
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL
# Written by Daniel Robbins (drobbins@gentoo.org)

* rc-scripts 1.4.3.11 (14 Sep 2003)

  14 Oct 2003; Martin Schlemmer <azarah@gentoo.org>:

    Add initial udev support.  Modified /sbin/rc and /etc/init.d/halt.sh.
    Resolves bug #27527.

    Add squid to /etc/services, bug #30995.  Other cleanups from rac.

    Add patch from Kumba <kumba@gentoo.org> to MAKEDEV to not allow
    running while pwd is root (/).

    Add 'after hotplug' to /etc/init.d/consolefont, bug #30856.

    Add entry for floppy in /etc/fstab, bug #30574.

    Remove changing group of /tmp/.{X,ICE}-unix, as it it not needed,
    bug #28861.

    Apply a patch from Mike Frysinger <vapier@gentoo.org> for rc-status.
    It now will work with runlevels named with any characters (other than
    ones found in default bash IFS).  It also adds a few sanity/error
    checks, bug #26432.

    Change /etc/inputrc to have PageUp/PageDown search through bash
    history again, bug #26036.

  14 Sep 2003; Martin Schlemmer <azarah@gentoo.org>:

    Change update-modules to modules-update in manpage, bug #28101.

* rc-scripts 1.4.3.10p1 (08 Sep 2003)

  08 Sep 2003; Martin Schlemmer <azarah@gentoo.org>:
  
    Change the '-k' switch to dhcpcd to '-z' in /etc/init.d/net.eth0.

  12 Aug 2003; Martin Schlemmer <azarah@gentoo.org>:

    Add missing 'local x' to filter_environ() (bug #26429), thanks to
    Mark Wagner <mark@lanfear.net>.  Modified rc-services.sh for this.

  11 Aug 2003; Martin Schlemmer <azarah@gentoo.org>:

    Modify /etc/init.d/modules not to print the autoloading stuff if
    no modules should be loaded (resolving bug #26288), per request from
    Michael Frysinger <vapier@gentoo.org>.

    Fix get_bootparam() in /sbin/functions.sh to check for existance of
    the /proc/cmdline proc entry.
    
  10 Aug 2003; Martin Schlemmer <azarah@gentoo.org>:
