@@ -36,29 +36,31 @@ start() {
 
 		# Reset pam_console permissions
 		rm -rf /var/run/console.lock /var/run/console/*
-
-		#
-		# Clean up any stale locks.
-		#
-		ebegin "Cleaning /var/lock, /var/run"
-		( find /var/lock -type f -exec rm -f -- {} \; )
+		if [ -z "${CDBOOT}" ]
+		then
+			#
+			# Clean up any stale locks.
+			#
+			ebegin "Cleaning /var/lock, /var/run"
+			( find /var/lock -type f -exec rm -f -- {} \; )
 		
-		#
-		# Clean up /var/run and create /var/run/utmp so that we can login.
-		#
-		for x in $(find /var/run/ ! -type d ! -name utmp ! -name innd.pid ! -name random-seed)
-		do
-			local daemon="${x##*/}"
-			daemon="${daemon%*.pid}"
-			# Do not remove pidfiles of already running daemons
-			if [ -z "`ps --no-heading -C "${daemon}"`" ]
-			then
-				if [ -f "${x}" -o -L "${x}" ]
+			#
+			# Clean up /var/run and create /var/run/utmp so that we can login.
+			#
+			for x in $(find /var/run/ ! -type d ! -name utmp ! -name innd.pid ! -name random-seed)
+			do
+				local daemon="${x##*/}"
+				daemon="${daemon%*.pid}"
+				# Do not remove pidfiles of already running daemons
+				if [ -z "`ps --no-heading -C "${daemon}"`" ]
 				then
-					rm -f "${x}"
+					if [ -f "${x}" -o -L "${x}" ]
+					then
+						rm -f "${x}"
+					fi
 				fi
-			fi
-		done
+			done
+		fi
 		# Setup login records
 		> /var/run/utmp
 		touch /var/log/wtmp
@@ -76,14 +78,17 @@ start() {
 		#
 		# Clean up /tmp directory
 		#
-		ebegin "Cleaning /tmp directory"
-		rm -f /tmp/.X*-lock /tmp/esrv* /tmp/kio* /tmp/jpsock.* /tmp/.fam* &>/dev/null
-		rm -rf /tmp/.esd* /tmp/orbit-* /tmp/ssh-* /tmp/ksocket-* /tmp/.*-unix &>/dev/null
-		# Make sure our X11 stuff have the correct permissions
-		mkdir -p /tmp/.{ICE,X11}-unix &>/dev/null
-#		chown root.root /tmp/.{ICE,X11}-unix &>/dev/null
-		chmod 1777 /tmp/.{ICE,X11}-unix &>/dev/null
-		eend 0
+		if [ -z "${CDBOOT}" ]
+		then
+			ebegin "Cleaning /tmp directory"
+			rm -f /tmp/.X*-lock /tmp/esrv* /tmp/kio* /tmp/jpsock.* /tmp/.fam* &>/dev/null
+			rm -rf /tmp/.esd* /tmp/orbit-* /tmp/ssh-* /tmp/ksocket-* /tmp/.*-unix &>/dev/null
+			# Make sure our X11 stuff have the correct permissions
+			mkdir -p /tmp/.{ICE,X11}-unix &>/dev/null
+#			chown root.root /tmp/.{ICE,X11}-unix &>/dev/null
+			chmod 1777 /tmp/.{ICE,X11}-unix &>/dev/null
+			eend 0
+		fi
 	fi
 
 	#
