@@ -10,18 +10,18 @@ depend() {
 
 start() {
 	ebegin "Enabling numlock on ttys"
-	for tty in /dev/tty[1-8]
+	for tty in $(seq 1 11)
 	do
-		setleds -D +num < ${tty} &>/dev/null
+		setleds -D +num < /dev/tty${tty} &>/dev/null
 	done
 	eend $? "Failed to enable numlock"
 }
 
 stop() {
 	ebegin "Disabling numlock on ttys"
-	for tty in /dev/tty[1-8]
+	for tty in $(seq 1 11)
 	do
-		setleds -D -num < ${tty} &>/dev/null
+		setleds -D -num < /dev/tty${tty} &>/dev/null
 	done
 	eend $? "Failed to disable numlock"
 }
