@@ -2,6 +2,12 @@
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL
 # Written by Daniel Robbins (drobbins@gentoo.org)
 
+  15 Oct 2003; Martin Schlemmer <azarah@gentoo.org>:
+
+    Initial bootsplash patch as from LiveCD's.
+
+    Add more tty's to /etc/init.d/numlock, bug #28252.
+
 * rc-scripts 1.4.3.11 (14 Sep 2003)
 
   14 Oct 2003; Martin Schlemmer <azarah@gentoo.org>:
